Fix Gmail icon sizing and alignment in footer

--- a/style.css
+++ b/style.css
@@ -638,13 +638,17 @@ main {
 
 .footer-icon {
   font-size: 1.2rem;
+  line-height: 1;
+  vertical-align: middle;
 }
 
 .gmail-icon {
-  width: 20px;
-  height: 20px;
+  width: 18px;
+  height: 18px;
   display: inline-block;
   fill: currentColor;
+  vertical-align: middle;
+  margin-right: 2px;
 }
 
 /* ===== RESPONSIVE DESIGN ===== */
